--- a/src/main/resources/templates/menu/index.html
+++ b/src/main/resources/templates/menu/index.html
@@ -8,7 +8,7 @@
 
 <nav th:replace="fragments :: navigation"></nav>
 
-<p th:unless="${categories} and ${categories.size()}">no categories :(</p>
+<p th:unless="${menus} and ${menus.size()}">no menus :(</p>
 
 <table class="table">
 
@@ -16,13 +16,13 @@
         <th>Name</th>
     </tr>
 
-    <tr th:each="category : ${categories}">
-        <td th:text="${category.name}"></td>
+    <tr th:each="menu : ${menus}">
+        <td><a th:href="'/menu/view/' + ${menu.id}" th:text="${menu.name}"></a></td>
     </tr>
 
 </table>
 
-<a href="/category/add">Add Category</a>
+<a href="/menu/add">Add Menu</a>
 
 
 </body>
