--- a/src/main/resources/templates/menu/add-item.html
+++ b/src/main/resources/templates/menu/add-item.html
@@ -5,29 +5,20 @@
 <h1 th:text="${title}">Default Title</h1>
 
 <nav th:replace="fragments :: navigation"></nav>
-
-<form method="post" style="max-width:600px;" th:object="${cheese}">
+<form method="post" style="max-width:600px;" th:object="${form}" action="../add-item">
     <div class="form-group">
-        <label th:for="name">Name</label>
-        <input class="form-control" th:field="*{name}" />
-        <span th:errors="*{name}" class="error"></span>
-    </div>
-    <div class="form-group">
-        <label th:for="description">Description</label>
-        <input class="form-control" th:field="*{description}" />
-        <span th:errors="*{description}" class="error"></span>
-    </div>
-
-    <div class="form-group">
-        <label th:for="type">Type</label>
-        <select name="categoryId">
-            <option th:each="category : ${categories}"
-                    th:text="${category.name}"
-                    th:value="${category.id}"></option>
+        <label th:for="cheeseId" th:field="*{cheeses}">Cheese</label>
+        <select name="cheeseId">
+            <option th:each="cheese : *{cheeses}"
+                    th:text="${cheese.name}"
+                    th:value="${cheese.id}"></option>
+            <input type="hidden" name="menuId" th:value="*{menu.id}" />
         </select>
-    </div>
 
-    <input type="submit" value="Add Cheese" />
+    </div>
+    <span th:errors="*{cheeses}" class="error"></span>
+
+    <input type="submit" value="Update Menu" th:field="${cheeseId}" />
 </form>
 
 </body>
